crates/snow-parser/tests/snapshots/parser_tests__actor_def_with_params.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"actor Counter(state) do\\n  state + 1\\nend\")"
---
SOURCE_FILE@0..33
  ACTOR_DEF@0..33
    ACTOR_KW@0..5 "actor"
    NAME@5..12
      IDENT@5..12 "Counter"
    PARAM_LIST@12..19
      L_PAREN@12..13 "("
      PARAM@13..18
        IDENT@13..18 "state"
      R_PAREN@18..19 ")"
    DO_KW@19..21 "do"
    BLOCK@21..30
      NEWLINE@21..22 "\n"
      BINARY_EXPR@22..29
        NAME_REF@22..27
          IDENT@22..27 "state"
        PLUS@27..28 "+"
        LITERAL@28..29
          INT_LITERAL@28..29 "1"
      NEWLINE@29..30 "\n"
    END_KW@30..33 "end"
  EOF@33..33 ""
