crates/snow-parser/tests/snapshots/parser_tests__actor_def_with_terminate_clause.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..52
  ACTOR_DEF@0..52
    ACTOR_KW@0..5 "actor"
    NAME@5..11
      IDENT@5..11 "Worker"
    PARAM_LIST@11..18
      L_PAREN@11..12 "("
      PARAM@12..17
        IDENT@12..17 "state"
      R_PAREN@17..18 ")"
    DO_KW@18..20 "do"
    BLOCK@20..49
      NEWLINE@20..21 "\n"
      NAME_REF@21..26
        IDENT@21..26 "state"
      NEWLINE@26..27 "\n"
      TERMINATE_CLAUSE@27..48
        TERMINATE_KW@27..36 "terminate"
        DO_KW@36..38 "do"
        BLOCK@38..45
          NEWLINE@38..39 "\n"
          NAME_REF@39..44
            IDENT@39..44 "state"
          NEWLINE@44..45 "\n"
        END_KW@45..48 "end"
      NEWLINE@48..49 "\n"
    END_KW@49..52 "end"
  EOF@52..52 ""
