crates/snow-parser/tests/snapshots/parser_tests__actor_with_receive_and_send.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..54
  ACTOR_DEF@0..54
    ACTOR_KW@0..5 "actor"
    NAME@5..15
      IDENT@5..15 "EchoServer"
    DO_KW@15..17 "do"
    BLOCK@17..51
      NEWLINE@17..18 "\n"
      RECEIVE_EXPR@18..50
        RECEIVE_KW@18..25 "receive"
        DO_KW@25..27 "do"
        NEWLINE@27..28 "\n"
        RECEIVE_ARM@28..46
          IDENT_PAT@28..31
            IDENT@28..31 "msg"
          ARROW@31..33 "->"
          SEND_EXPR@33..46
            SEND_KW@33..37 "send"
            ARG_LIST@37..46
              L_PAREN@37..38 "("
              NAME_REF@38..41
                IDENT@38..41 "msg"
              COMMA@41..42 ","
              NAME_REF@42..45
                IDENT@42..45 "msg"
              R_PAREN@45..46 ")"
        NEWLINE@46..47 "\n"
        END_KW@47..50 "end"
      NEWLINE@50..51 "\n"
    END_KW@51..54 "end"
  EOF@54..54 ""
