crates/snow-parser/tests/snapshots/parser_tests__binary_add.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"1 + 2\")"
---
SOURCE_FILE@0..3
  BINARY_EXPR@0..3
    LITERAL@0..1
      INT_LITERAL@0..1 "1"
    PLUS@1..2 "+"
    LITERAL@2..3
      INT_LITERAL@2..3 "2"
  EOF@3..3 ""
