crates/snow-parser/tests/snapshots/parser_tests__binary_mul_add_precedence.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"a * b + c\")"
---
SOURCE_FILE@0..5
  BINARY_EXPR@0..5
    BINARY_EXPR@0..3
      NAME_REF@0..1
        IDENT@0..1 "a"
      STAR@1..2 "*"
      NAME_REF@2..3
        IDENT@2..3 "b"
    PLUS@3..4 "+"
    NAME_REF@4..5
      IDENT@4..5 "c"
  EOF@5..5 ""
