crates/snow-parser/tests/snapshots/parser_tests__block_multi_statement.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "block_and_debug(\"let x = 1\\nx + 1\")"
---
SOURCE_FILE@0..10
  BLOCK@0..10
    LET_BINDING@0..6
      LET_KW@0..3 "let"
      NAME@3..4
        IDENT@3..4 "x"
      EQ@4..5 "="
      LITERAL@5..6
        INT_LITERAL@5..6 "1"
    NEWLINE@6..7 "\n"
    BINARY_EXPR@7..10
      NAME_REF@7..8
        IDENT@7..8 "x"
      PLUS@8..9 "+"
      LITERAL@9..10
        INT_LITERAL@9..10 "1"
  EOF@10..10 ""
