crates/snow-parser/tests/snapshots/parser_tests__call_no_args.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"foo()\")"
---
SOURCE_FILE@0..5
  CALL_EXPR@0..5
    NAME_REF@0..3
      IDENT@0..3 "foo"
    ARG_LIST@3..5
      L_PAREN@3..4 "("
      R_PAREN@4..5 ")"
  EOF@5..5 ""
