crates/snow-parser/tests/snapshots/parser_tests__case_simple.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case x do\\n  1 -> \\\"one\\\"\\n  2 -> \\\"two\\\"\\nend\")"
---
SOURCE_FILE@0..29
  CASE_EXPR@0..29
    CASE_KW@0..4 "case"
    NAME_REF@4..5
      IDENT@4..5 "x"
    DO_KW@5..7 "do"
    NEWLINE@7..8 "\n"
    MATCH_ARM@8..16
      LITERAL_PAT@8..9
        INT_LITERAL@8..9 "1"
      ARROW@9..11 "->"
      STRING_EXPR@11..16
        STRING_START@11..12 "\""
        STRING_CONTENT@12..15 "one"
        STRING_END@15..16 "\""
    NEWLINE@16..17 "\n"
    MATCH_ARM@17..25
      LITERAL_PAT@17..18
        INT_LITERAL@17..18 "2"
      ARROW@18..20 "->"
      STRING_EXPR@20..25
        STRING_START@20..21 "\""
        STRING_CONTENT@21..24 "two"
        STRING_END@24..25 "\""
    NEWLINE@25..26 "\n"
    END_KW@26..29 "end"
  EOF@29..29 ""
