crates/snow-parser/tests/snapshots/parser_tests__case_with_literal_patterns.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case x do\\n  0 -> \\\"zero\\\"\\n  _ -> \\\"other\\\"\\nend\")"
---
SOURCE_FILE@0..32
  CASE_EXPR@0..32
    CASE_KW@0..4 "case"
    NAME_REF@4..5
      IDENT@4..5 "x"
    DO_KW@5..7 "do"
    NEWLINE@7..8 "\n"
    MATCH_ARM@8..17
      LITERAL_PAT@8..9
        INT_LITERAL@8..9 "0"
      ARROW@9..11 "->"
      STRING_EXPR@11..17
        STRING_START@11..12 "\""
        STRING_CONTENT@12..16 "zero"
        STRING_END@16..17 "\""
    NEWLINE@17..18 "\n"
    MATCH_ARM@18..28
      WILDCARD_PAT@18..19
        IDENT@18..19 "_"
      ARROW@19..21 "->"
      STRING_EXPR@21..28
        STRING_START@21..22 "\""
        STRING_CONTENT@22..27 "other"
        STRING_END@27..28 "\""
    NEWLINE@28..29 "\n"
    END_KW@29..32 "end"
  EOF@32..32 ""
